--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   share: ^0.5.3
   dio: ^1.0.13
   event_bus:  ^1.0.1
+  flutter_spinkit: ^3.1.0
+  flutter_cache_manager: ^0.2.0+1
+  path_provider: ^0.4.1
+  permission_handler: 2.1.0
+  flutter_statusbar: ^0.0.1
+  flutter_webview_plugin: ^0.2.1+2
+  scoped_model: ^1.0.1
+  package_info: ^0.3.2
+  flutter_redux: ^0.5.3
+  photo_view: ^0.1.3
 
 dev_dependencies:
   flutter_test:
