--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   package_info: ^0.3.2
   flutter_redux: ^0.5.3
   photo_view: ^0.1.3
+  flutter_svg: ^0.10.1
 
 dev_dependencies:
   flutter_test:
